tests/ui/invalid_operation_id.stderr
error: Invalid operation ID 'get-user-by-id'
       help: operation IDs must contain only alphanumeric characters and underscores
       note: valid examples: 'getUserById', 'create_user', 'deleteItem123'
 --> tests/ui/invalid_operation_id.rs:7:1
  |
7 | /// @id get-user-by-id
  | ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `aide::axum::IntoApiResponse`
 --> tests/ui/invalid_operation_id.rs:1:5
  |
1 | use aide::axum::IntoApiResponse;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `axum::response::Json`
 --> tests/ui/invalid_operation_id.rs:2:5
  |
2 | use axum::response::Json;
  |     ^^^^^^^^^^^^^^^^^^^^
